# ninfer

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/cli/: main.cpp  options.cpp  options.h
apps/serve/: main.cpp
bench/: CMakeLists.txt  README.md  add_bias_bench.cu  argmax_bench.cu  causal_conv1d_bench.cu  causal_conv1d_silu_bench.cu  e2e_bench.cpp  e2e_bench_support.cpp  e2e_bench_support.h  embed_gather_bench.cu  embedding_bench.cu  gated_delta_rule_bench.cu  gdn_gating_bench.cu  gdn_gating_proj_bench.cu  gdn_in_ab_prefill_bench.cu  gelu_bench.cu  gqa_attention_bench.cu  l2norm_bench.cu  layer_norm_bench.cu  linear_bench.cu  linear_op_bench.cu  ninfer_bench.cpp  ninfer_bench_support.cpp  ninfer_bench_support.h  qus_bench.cpp  qus_bench_common.h  qus_bench_support.cpp  qus_bench_support.h  residual_add_bench.cu  rmsnorm_bench.cu  rope_bench.cu  sampling_select_bench.cu  scatter_bench.cu  sigmoid_mul_bench.cu  silu_and_mul_bench.cu  silu_mul_bench.cu  target_verify_bench.cpp  vision_attention_bench.cu  vision_pos_embed_bench.cu
bench/fixtures/: bench_corpus.ids  bench_corpus.manifest.json
bench/kernels/: add_bias_bench.cu  argmax_bench.cu  causal_conv1d_silu_bench.cu  embedding_bench.cu  gated_delta_rule_bench.cu  gdn_gating_bench.cu  gdn_gating_proj_bench.cu  gelu_bench.cu  l2norm_bench.cu  layer_norm_bench.cu  linear_bench.cu  linear_op_bench.cu  ninfer_bench_common.h  residual_add_bench.cu  rmsnorm_bench.cu  rope_bench.cu  scatter_bench.cu  sigmoid_mul_bench.cu  silu_mul_bench.cu  vision_attention_bench.cu  vision_pos_embed_bench.cu
bench/ops/: argmax_bench.cu  attention_layer_bench.cu  bidirectional_gqa_attention_bench.cu  causal_conv1d_silu_bench.cu  embedding_bench.cu  gated_delta_rule_bench.cu  gdn_gating_bench.cu  gdn_gating_proj_bench.cu  gdn_layer_bench.cu  gqa_attention_bench.cu  input_proj_bench.cu  kv_cache_append_prefix_bench.cu  l2norm_bench.cu  layer_norm_bench.cu  linear_bench.cu  linear_op_bench.cu  ninfer_bench_common.h  output_stage_bench.cu  position_bench.cu  prepare_masked_block_bench.cu  residual_add_bench.cu  rmsnorm_bench.cu  rope_bench.cu  sampling_select_bench.cu  sigmoid_mul_bench.cu  silu_mul_bench.cu  sparse_moe_bench.cu  swa_bench.cu  vision_pos_embed_bench.cu  w8_input_proj_bench.cu  w8_linear_add_bench.cu  w8_linear_swiglu_bench.cu
src/: CMakeLists.txt  main.cpp
src/artifact/: binder.cpp  binder.h  materializer.cpp  materializer.h  reader.cpp  reader.h  storage_layouts.cpp  typed_binding.cpp  typed_binding.h
src/core/: arena.cu  arena.h  decode_graph.cpp  decode_graph.h  device.cu  device.h  dtype.cpp  kv_cache.cpp  kv_cache.h  layout.cpp  layout.h  nvtx.h  nvtx_range.h  state_store.cpp  tensor.cpp  tensor.h  weight.h  weight_store.cpp  weight_store_parser.cpp
src/media/: media.cpp  media.h
src/model/: gqa_prompt_ops.h  mtp_ops.h  position.cu  position.h  processor.cpp  qwen3_6_27b.cpp  qwen3_6_vision.cpp  vision_ops.cpp  vision_ops.cu  vision_ops.h
src/product/: speculative_options.h
src/runtime/: decode_graph.cpp  engine.cpp  round_dump.cpp
src/serve/: anthropic_schema.cpp  anthropic_schema.h  generation_service.cpp  generation_service.h  http_server.cpp  http_server.h  main.cpp  openai_schema.cpp  openai_schema.h  request.h  request_log.cpp  request_log.h  serve_options.cpp  serve_options.h  tool_call_parser.cpp  tool_call_parser.h  translate.cpp  translate.h
src/targets/: registry.cpp  registry.h
src/text/: chat_template.cpp  cli.cpp  text_runner.cpp  tokenizer.cpp  unicode.cpp  unicode.h
tests/: CMakeLists.txt  README.md  artifact_fixture.h  test_anthropic_schema.cpp  test_arena.cpp  test_artifact_materialization.cpp  test_bench_matrix.py  test_bench_report_tools.py  test_bench_tokenizer_tools.py  test_cli_options.cpp  test_decode_e2e_report_redaction.py  test_device.cpp  test_dtype.cpp  test_e2e_bench_support.cpp  test_engine_load.cpp  test_engine_memory_stats.cpp  test_engine_mtp_e2e.cpp  test_engine_real_file.cpp  test_engine_vision_e2e.cpp  test_generation_budget.cpp  test_generation_controller.cpp  test_graph_readiness_structure.cpp  test_kv_cache.cpp  test_model_bind.cpp  test_model_blocks.cpp  test_model_config.cpp  test_ninfer_artifact_reader.cpp  test_ninfer_bench_support.cpp  test_openai_schema.cpp  test_output_resolution.cpp  test_processor.cpp  test_public_api.cpp  test_q5090_pack_golden.cpp  test_q5090_parser.cpp  test_qus_bench_support.cpp  test_qwen_chat_template.cpp  test_qwen_text_cli.cpp  test_qwen_text_runner.cpp  test_qwen_text_tokenizer.cpp  test_request_log.cpp  (+11 more)
tests/artifact/: __init__.py  test_container.py  test_layouts.py  test_quantize.py
tests/fixtures/: make_q5090_fixture.py
tests/helpers/: row_split_golden.py
tests/kernels/: gdn_ref.h  op_check.h  op_tester.h  q5090_pack.h  row_split_pack.h  test_argmax.cpp  test_causal_conv1d.cpp  test_causal_conv1d_silu.cpp  test_embed_gather.cpp  test_embedding.cpp  test_gated_delta_rule.cpp  test_gdn_gating.cpp  test_gdn_gating_proj.cpp  test_gdn_in_ab_prefill.cpp  test_gqa_attention.cpp  test_l2norm.cpp  test_layer_norm.cpp  test_linear.cpp  test_mtp_pack.cpp  test_mtp_round.cpp  test_residual_add.cpp  test_rmsnorm.cpp  test_rope.cpp  test_sampling.cpp  test_sigmoid_gate_mul.cpp  test_sigmoid_mul.cpp  test_silu_and_mul.cpp  test_silu_mul.cpp  test_vision_attention.cpp  test_vision_elementwise.cpp  test_vision_pos_embed.cpp
tests/ops/: gdn_ref.h  op_check.h  op_tester.h  row_split_pack.h  test_argmax.cpp  test_bidirectional_gqa_attention.cpp  test_cast.cpp  test_causal_conv1d_silu.cpp  test_embedding.cpp  test_gated_delta_rule.cpp  test_gdn_gating.cpp  test_gdn_gating_proj.cpp  test_gdn_gating_proj_plan.cpp  test_gdn_input_proj_conv_snapshot.cpp  test_gqa_attention.cpp  test_input_proj_plan.cpp  test_kv_cache_append_prefix.cpp  test_l2norm.cpp  test_linear.cpp  test_linear_add_plan.cpp  test_linear_swiglu_plan.cpp  test_mtp_pack.cpp  test_mtp_round.cpp  test_position.cpp  test_prepare_masked_block.cpp  test_q4_linear_dispatch.cpp  (+18 more)
tools/: CMakeLists.txt  README.md  weight_format.md
(+1360 files in other folders)
