# Per-op performance binaries. Each is a separate executable that runs ONE op
# at the real Qwen3.6-27B shapes and is the target for ncu/nsys.
#   ninfer_add_bench(<name> SOURCES <files...>)
# Built with -lineinfo so ncu can attribute SASS to source lines.
# Performance is GATED by ncu (see docs/kernel-development.md §8), not by the
# GB/s these binaries print.
function(ninfer_add_bench name)
  cmake_parse_arguments(arg "" "" "SOURCES" ${ARGN})
  add_executable(${name} ${arg_SOURCES})
  target_link_libraries(${name} PRIVATE ninfer_core)
  target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
  target_compile_options(${name} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-lineinfo>)
endfunction()

ninfer_add_bench(ninfer_silu_mul_bench SOURCES silu_mul_bench.cu)
ninfer_add_bench(ninfer_residual_add_bench SOURCES residual_add_bench.cu)
ninfer_add_bench(ninfer_sigmoid_mul_bench SOURCES sigmoid_mul_bench.cu)
ninfer_add_bench(ninfer_rmsnorm_bench SOURCES rmsnorm_bench.cu)
ninfer_add_bench(ninfer_l2norm_bench SOURCES l2norm_bench.cu)
ninfer_add_bench(ninfer_gdn_gating_bench SOURCES gdn_gating_bench.cu)
ninfer_add_bench(ninfer_gdn_gating_proj_bench SOURCES gdn_gating_proj_bench.cu)
ninfer_add_bench(ninfer_gated_delta_rule_bench SOURCES gated_delta_rule_bench.cu)
target_include_directories(ninfer_gated_delta_rule_bench PRIVATE ${PROJECT_SOURCE_DIR}/src)
ninfer_add_bench(ninfer_rope_bench SOURCES rope_bench.cu)
ninfer_add_bench(ninfer_add_bias_bench SOURCES add_bias_bench.cu)
ninfer_add_bench(ninfer_gelu_bench SOURCES gelu_bench.cu)
ninfer_add_bench(ninfer_layer_norm_bench SOURCES layer_norm_bench.cu)
ninfer_add_bench(ninfer_vision_pos_embed_bench SOURCES vision_pos_embed_bench.cu)
ninfer_add_bench(ninfer_scatter_bench SOURCES scatter_bench.cu)
ninfer_add_bench(ninfer_vision_attention_bench SOURCES vision_attention_bench.cu)
ninfer_add_bench(ninfer_gqa_attention_bench SOURCES gqa_attention_bench.cu)
ninfer_add_bench(ninfer_embedding_bench SOURCES embedding_bench.cu)
ninfer_add_bench(ninfer_argmax_bench SOURCES argmax_bench.cu)
ninfer_add_bench(ninfer_sampling_select_bench SOURCES sampling_select_bench.cu)
target_include_directories(ninfer_sampling_select_bench PRIVATE ${PROJECT_SOURCE_DIR}/src)
ninfer_add_bench(ninfer_causal_conv1d_silu_bench SOURCES causal_conv1d_silu_bench.cu)
ninfer_add_bench(ninfer_linear_bench SOURCES linear_bench.cu)
ninfer_add_bench(ninfer_linear_op_bench SOURCES linear_op_bench.cu)
ninfer_add_bench(ninfer_bench SOURCES ninfer_bench.cpp ninfer_bench_support.cpp)
target_compile_definitions(ninfer_bench PRIVATE NINFER_SOURCE_DIR="${PROJECT_SOURCE_DIR}")
ninfer_add_bench(ninfer_target_verify_bench SOURCES target_verify_bench.cpp)
